# pl_0

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: banner.h  codegen.h  diagnostics.h  interpreter.h  lexer.h  parser_codegen.h
manuscript/: build.sh  main.tex  references.bib
src/: codegen.cpp  diagnostics.cpp  interpreter.cpp  lexer.cpp  main.cpp  parser_codegen.cpp
test/: test_add.pl0  test_chinese.pl0  test_codegen.pl0  test_consecutive.pl0  test_error.pl0  test_factorial.pl0  test_if.pl0  test_interactive.pl0  test_loop.pl0  test_mixed.pl0  test_procedure.pl0
